[gd_scene load_steps=16 format=3 uid="uid://1wiku8otqgry"]

[ext_resource type="Script" uid="uid://b3h0bnn00awnn" path="res://scenes/miniGames-ZonaDasar/mini_game_dasar.gd" id="1_pwr2y"]
[ext_resource type="Texture2D" uid="uid://c8odr5ask4ubw" path="res://scenes/miniGames-ZonaDasar/bg_dasar.png" id="2_4ybjm"]
[ext_resource type="Texture2D" uid="uid://wil51igo14qx" path="res://scenes/miniGames/kotak.png" id="3_syefr"]
[ext_resource type="Texture2D" uid="uid://bvcsuhic4g8t5" path="res://scenes/miniGames/jawaban.png" id="4_3pe7t"]
[ext_resource type="Texture2D" uid="uid://gv7jwgs752hf" path="res://scenes/miniGames/submit.png" id="5_6ofj6"]
[ext_resource type="AudioStream" uid="uid://c76ebunjhhqed" path="res://scenes/miniGames/Sbenar.mp3" id="6_07b0s"]
[ext_resource type="AudioStream" uid="uid://c8o0mx32qmy5c" path="res://scenes/miniGames/victory.mp3" id="7_b30tn"]
[ext_resource type="AudioStream" uid="uid://yn5r0nrbugca" path="res://scenes/miniGames/salah.mp3" id="8_l8y20"]
[ext_resource type="AudioStream" uid="uid://c2wupwdxfb5dt" path="res://scenes/miniGames/kalah.mp3" id="9_q8si8"]
[ext_resource type="Texture2D" uid="uid://c42f8v41gaj6w" path="res://scenes/miniGames/btn_mute.png" id="10_lwh6v"]
[ext_resource type="Texture2D" uid="uid://g1bj4lxjdt5n" path="res://scenes/miniGames/btn_music.png" id="11_cjgxl"]
[ext_resource type="AudioStream" uid="uid://n0vkmh4yx4bd" path="res://scenes/miniGames/musiccc.mp3" id="12_kef5k"]
[ext_resource type="Texture2D" uid="uid://1e0bb0sns40o" path="res://scenes/miniGames/hati1.png" id="13_4ybjm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lnvvh"]
texture = ExtResource("3_syefr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3wh1t"]
texture = ExtResource("4_3pe7t")

[node name="MiniGame" type="Control" groups=["mini_game"]]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pwr2y")

[node name="bg2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.008
offset_right = 2.0
offset_bottom = 0.23999023
texture = ExtResource("2_4ybjm")
expand_mode = 1

[node name="kotak_gambar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.259
anchor_top = 0.033
anchor_right = 0.72900003
anchor_bottom = 0.646
offset_left = 1.4799805
offset_top = -23.76
offset_right = 0.87994385
offset_bottom = -13.120026
theme_override_styles/panel = SubResource("StyleBoxTexture_lnvvh")

[node name="pertanyaan" type="TextureRect" parent="kotak_gambar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.16100001
anchor_top = 0.27600002
anchor_right = 0.82500005
anchor_bottom = 0.74500006
offset_left = 193.23
offset_top = 87.35999
offset_right = -185.25003
offset_bottom = -95.55002
grow_horizontal = 2
grow_vertical = 2

[node name="kotak_jawaban" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.148
anchor_top = 0.601
anchor_right = 0.82000005
anchor_bottom = 0.81500006
offset_left = 0.55999756
offset_top = 0.27999878
offset_right = -0.60009766
offset_bottom = -3.8000488
theme_override_styles/panel = SubResource("StyleBoxTexture_3wh1t")

[node name="HBoxContainer" type="HBoxContainer" parent="kotak_jawaban"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.3249817
offset_right = 1.3249817
grow_horizontal = 2
grow_vertical = 2

[node name="huruf_pool" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15400001
anchor_top = 0.81100005
anchor_right = 0.80200005
anchor_bottom = 0.99700004
offset_left = -0.120025635
offset_top = 0.079956055
offset_right = -24.560059
offset_bottom = 0.15997314
columns = 13

[node name="TextureButton" type="TextureButton" parent="." groups=["mini_game"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.795
anchor_top = 0.60800004
anchor_right = 0.89800006
anchor_bottom = 0.78900003
offset_left = -0.6000366
offset_top = 7.2399597
offset_right = 0.5599365
offset_bottom = -0.08001709
texture_normal = ExtResource("5_6ofj6")
ignore_texture_size = true
stretch_mode = 0

[node name="SFXBenar" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_07b0s")

[node name="BGMVictory" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_b30tn")

[node name="SFXSalah" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_l8y20")

[node name="BGMGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_q8si8")

[node name="btn_mute" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.88600004
anchor_top = 0.012
anchor_right = 0.98600006
anchor_bottom = 0.15
offset_left = -0.080078125
offset_top = 0.35999966
offset_right = -0.080078125
offset_bottom = -2.0000076
texture_normal = ExtResource("10_lwh6v")
ignore_texture_size = true
stretch_mode = 0

[node name="btn_music" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.786
anchor_top = 0.014
anchor_right = 0.892
anchor_bottom = 0.14400001
offset_left = -0.08001709
offset_top = -0.07999992
offset_right = 0.23999023
offset_bottom = 0.31999207
texture_normal = ExtResource("11_cjgxl")
ignore_texture_size = true
stretch_mode = 0

[node name="BGMGameplay" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_kef5k")

[node name="hati1" type="Sprite2D" parent="."]
position = Vector2(78, 63)
scale = Vector2(0.28399533, 0.29088783)
texture = ExtResource("13_4ybjm")

[node name="hati2" type="Sprite2D" parent="."]
position = Vector2(212, 63)
scale = Vector2(0.284, 0.284)
texture = ExtResource("13_4ybjm")
